native/desktop-macos/headers/desktop_macos.h

typedef struct MetalView MetalView;
typedef struct Window Window;
typedef char *StrPtr;
typedef double LogicalPixels;
typedef struct LogicalPoint {
  LogicalPixels x;
  LogicalPixels y;
} LogicalPoint;
typedef struct LogicalSize {
  LogicalPixels width;
  LogicalPixels height;
} LogicalSize;
void dispatcher_main_exec_async(void (*f)(void));
void window_attach_layer(const struct Window *window, const struct MetalView *layer);
void window_set_title(const struct Window *window, StrPtr new_title);
StrPtr window_get_title(const struct Window *window);
struct LogicalPoint window_get_origin(const struct Window *window);
struct LogicalSize window_get_size(const struct Window *window);
void window_set_rect(const struct Window *window,
                     struct LogicalPoint origin,
                     struct LogicalSize size,
                     bool animate);
struct LogicalPoint window_get_content_origin(const struct Window *window);