kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    private static class window_attach_layer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_attach_layer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_attach_layer(const struct Window *window, const struct MetalView *layer)
     * }
     */
    public static FunctionDescriptor window_attach_layer$descriptor() {
        return window_attach_layer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_attach_layer(const struct Window *window, const struct MetalView *layer)
     * }
     */
    public static MethodHandle window_attach_layer$handle() {
        return window_attach_layer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_attach_layer(const struct Window *window, const struct MetalView *layer)
     * }
     */
    public static MemorySegment window_attach_layer$address() {
        return window_attach_layer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_attach_layer(const struct Window *window, const struct MetalView *layer)
     * }
     */
    public static void window_attach_layer(MemorySegment window, MemorySegment layer) {
        var mh$ = window_attach_layer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_attach_layer", window, layer);
            }
            mh$.invokeExact(window, layer);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_set_title {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_set_title");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_set_title(const struct Window *window, StrPtr new_title)
     * }
     */
    public static FunctionDescriptor window_set_title$descriptor() {
        return window_set_title.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_set_title(const struct Window *window, StrPtr new_title)
     * }
     */
    public static MethodHandle window_set_title$handle() {
        return window_set_title.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_set_title(const struct Window *window, StrPtr new_title)
     * }
     */
    public static MemorySegment window_set_title$address() {
        return window_set_title.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_set_title(const struct Window *window, StrPtr new_title)
     * }
     */
    public static void window_set_title(MemorySegment window, MemorySegment new_title) {
        var mh$ = window_set_title.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_set_title", window, new_title);
            }
            mh$.invokeExact(window, new_title);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_title {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_title");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * StrPtr window_get_title(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_title$descriptor() {
        return window_get_title.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * StrPtr window_get_title(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_title$handle() {
        return window_get_title.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * StrPtr window_get_title(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_title$address() {
        return window_get_title.ADDR;
    }

    /**
     * {@snippet lang=c :
     * StrPtr window_get_title(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_title(MemorySegment window) {
        var mh$ = window_get_title.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_title", window);
            }
            return (MemorySegment)mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_origin {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            LogicalPoint.layout(),
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_origin");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct LogicalPoint window_get_origin(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_origin$descriptor() {
        return window_get_origin.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct LogicalPoint window_get_origin(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_origin$handle() {
        return window_get_origin.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct LogicalPoint window_get_origin(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_origin$address() {
        return window_get_origin.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct LogicalPoint window_get_origin(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_origin(SegmentAllocator allocator, MemorySegment window) {
        var mh$ = window_get_origin.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_origin", allocator, window);
            }
            return (MemorySegment)mh$.invokeExact(allocator, window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_size {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            LogicalSize.layout(),
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_size");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_size(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_size$descriptor() {
        return window_get_size.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_size(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_size$handle() {
        return window_get_size.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_size(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_size$address() {
        return window_get_size.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct LogicalSize window_get_size(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_size(SegmentAllocator allocator, MemorySegment window) {
        var mh$ = window_get_size.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_size", allocator, window);
            }
            return (MemorySegment)mh$.invokeExact(allocator, window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_set_rect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            LogicalPoint.layout(),
            LogicalSize.layout(),
            desktop_macos_h.C_BOOL
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_set_rect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_set_rect(const struct Window *window, struct LogicalPoint origin, struct LogicalSize size, bool animate)
     * }
     */
    public static FunctionDescriptor window_set_rect$descriptor() {
        return window_set_rect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_set_rect(const struct Window *window, struct LogicalPoint origin, struct LogicalSize size, bool animate)
     * }
     */
    public static MethodHandle window_set_rect$handle() {
        return window_set_rect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_set_rect(const struct Window *window, struct LogicalPoint origin, struct LogicalSize size, bool animate)
     * }
     */
    public static MemorySegment window_set_rect$address() {
        return window_set_rect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_set_rect(const struct Window *window, struct LogicalPoint origin, struct LogicalSize size, bool animate)
     * }
     */
    public static void window_set_rect(MemorySegment window, MemorySegment origin, MemorySegment size, boolean animate) {
        var mh$ = window_set_rect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_set_rect", window, origin, size, animate);
            }
            mh$.invokeExact(window, origin, size, animate);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_content_origin {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            LogicalPoint.layout(),
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_content_origin");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct LogicalPoint window_get_content_origin(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_content_origin$descriptor() {
        return window_get_content_origin.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct LogicalPoint window_get_content_origin(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_content_origin$handle() {
        return window_get_content_origin.HANDLE;
    }
